--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "index",
       "inline"
     ],
-    "website": "https://t.me/abhisheksvlog",
+    "website": "https://t.me/Zafarbarlaskar",
     "repository": "https://github.com/200920082007/TigerShroff",
     "env": {
         "BOT_TOKEN": {
